# postgres

./: --strip-components=1  --strip-components=2  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile-156  Dockerfile-16  Dockerfile-nix  Dockerfile-u18  LICENSE  README.md  amazon-amd64.pkr.hcl  amazon-arm.json  amazon-arm64-nix.pkr.hcl  amazon-arm64.pkr.hcl  amazon.json  ansible.cfg  bdifvtxsipaogmkruikf-manual-request-2023-06-22T164951Z  common-nix.vars.pkr.hcl  common.vars.json  common.vars.pkr.hcl  development-arm.vars.json  development-arm.vars.pkr.hcl  digitalOcean.json  docker-compose.yaml  docker.vars.json  flake.nix  legacy.vars.pkr.hcl  logfile  packer.json  sbom-buildtime.csv  sbom-runtime.cdx.json  sbom-runtime.csv  sbom-runtime.spdx.json  stage2-nix-psql-testinfra.pkr.hcl  stage2-nix-psql.pkr.hcl  vulnscan-buildtime.csv  vulnscan-runtime.csv
.github/: CODEOWNERS  pull_request_template.md
additional-scripts/: jwt.sql  logs.sql  realtime.sql  roles.sql  webhooks.sql
ansible/: Dockerfile  README.md  install_roles.yml  inventory.ini  manifest-playbook.yml  playbook-docker.yml  playbook.yml  vars.yml
ansible-nix/: playbook.yml  vars.yml
do_scripts/: README.md  create.js  initial-schema.sql  package-lock.json  package.json
docker/: Dockerfile  Dockerfile.u18  docker-compose.yml
ebssurrogate/: USAGE.md
migrations/: .env  Dockerfile.dbmate  README.md  docker-compose.yaml  schema-15.sql  schema-16.sql  schema.sql
nix/: Dockerfile  Dockerfile-pg-upgrade  auth.nix  (+7 more)
testinfra/: README.md  pyproject.toml  test_all_in_one.py  test_ami.py  test_ami_nix.py
(+706 files in other folders)
