[tool.poetry]
name = "testinfra"
version = "0.1.0"
description = ""
authors = ["Bobbie Soedirgo <bobbie@soedirgo.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.28.66"
docker = "^6.1.3"
ec2instanceconnectcli = "^1.0.3"
pytest = "^7.4.2"
requests = "^2.31.0"
boto3-stubs = {extras = ["essential"], version = "^1.28.66"}
pytest-testinfra = {extras = ["docker", "paramiko"], version = "^9.0.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
